@@ -3,6 +3,7 @@ This file documents the revision history for the SNClient+ agent.
 next:
          - fix vbs wrapper in default config
          - fix empty performance data when using perf-config units
+         - fix fix process state filter on windows (#169)
 
 0.28     Mon Oct 21 23:08:47 CEST 2024
          - update windows exporter to 0.29.1
